1.9 Modulos faltantes añadidos